Criado através do Colab

--- a/ListComprehension.ipynb
+++ b/ListComprehension.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMEMslsFlYEQwSWdKf9D1rR",
+      "authorship_tag": "ABX9TyMYAmg7DyctO1zS16Bi6n+a",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +44,7 @@
       "metadata": {
         "id": "I7qGJtRNHc7m"
       },
-      "execution_count": null,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -63,14 +63,26 @@
         "impostos = []\n",
         "\n",
         "for item in preco_produtos:\n",
-        "  impostos.append(item * 0,3)\n",
+        "  impostos.append(item * 0.3)\n",
         "print(impostos)"
       ],
       "metadata": {
-        "id": "8ah-bELWIBv1"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8ah-bELWIBv1",
+        "outputId": "fb83757d-f8d1-4ffa-faf8-65b21acabaed"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[30.0, 156.0, 45.0, 90.0, 1650.0]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -80,10 +92,22 @@
         "print(impostos)"
       ],
       "metadata": {
-        "id": "44_V-E1EITFO"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "44_V-E1EITFO",
+        "outputId": "2be0b58f-e614-4441-8a45-0f1513d93263"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[30.0, 156.0, 45.0, 90.0, 1650.0]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -118,9 +142,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "enH7V8z2JfJ8",
-        "outputId": "b7d3a701-6aa3-4ee9-8abd-d57093b3c49b"
+        "outputId": "e8f1b867-cafb-4ba0-b759-fc476d091622"
       },
-      "execution_count": 27,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
@@ -143,9 +167,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "N6T7bOzGLN3G",
-        "outputId": "7e27eaab-ddb1-4825-ab69-129264a0fa5d"
+        "outputId": "9e95e4a6-e3c9-43b7-e9a6-5108e1129433"
       },
-      "execution_count": 26,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
@@ -171,9 +195,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6EqHJhP0LadW",
-        "outputId": "7438bbcb-7d68-4cdf-8a3e-96435dce24ba"
+        "outputId": "44e62e0e-6d88-410e-db05-886193ec095b"
       },
-      "execution_count": 29,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "stream",
@@ -183,24 +207,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "_cL3nsgOL4Xn"
-      },
-      "execution_count": 24,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "d5vgx6CZN-B-"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -227,9 +233,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_cqStJ8cOdK2",
-        "outputId": "5b1fc40c-30e9-4b64-ad56-7b1c17db45b9"
+        "outputId": "44005726-237f-4b88-c57a-c5ccd1d8f583"
       },
-      "execution_count": 30,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "stream",
@@ -239,15 +245,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "eECoTtSMRP2l"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
